--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
     <!--====== PART START ======-->
 
-    <header class="appie-header-area appie-header-area-dark sticky">a
+    <header class="appie-header-area appie-header-area-dark sticky">
       <div class="container">
         <div class="header-nav-box">
           <div class="row align-items-center">
@@ -947,7 +947,6 @@
 
     <!--====== APPIE TEAM PART ENDS ======-->
      
-0
 
 
 
@@ -961,7 +960,7 @@
 
     <!--====== APPIE FAQ PART START ======-->
 
-    <section class="appie-faq-area appie-faq-area-dark pb-95">0
+    <section class="appie-faq-area appie-faq-area-dark pb-95">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
