--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
 </head>
 
 <body>  
-
+  
     <!--====== PRELOADER PART START ======-->
 
     <div class="loader-wrap">
@@ -54,7 +54,48 @@
     </div>
 
     <!--====== PRELOADER PART ENDS ======-->
-
+    <header class="appie-header-area appie-header-area-dark sticky">
+        <div class="container">
+          <div class="header-nav-box">
+            <div class="row align-items-center">
+              <div class="col-lg-2 col-md-4 col-sm-5 col-6 order-1 order-sm-1">
+                <div class="appie-logo-box logoadd">
+                  <a href="index-dark.html">
+                    <img class="logoos" src="assets/images/icon/logo.png" alt="" />
+                  </a>
+                </div>
+              </div>
+              <div class="col-lg-6 col-md-1 col-sm-1 order-3 order-sm-2 ">
+                <div class="appie-header-main-menu navbar ">
+                  <ul class="text-center">
+                    <li>
+                      <a href="index-dark.html">Home</i></a>
+                    </li>
+                    <li>
+                      <a href="index-dark.html#faq">FAQ</a>
+                    </li>
+                    <li>
+                      <a href="index-dark.html#mission">Mission</i></a>
+                    </li>
+                    <li>
+                      <a href="index-dark.html#blogs">Blogs </i></a>
+                    </li>
+                    <li><a href="index-dark.html#con">Contact</a></li>
+                  </ul>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-7 col-sm-6 col-6 order-2 order-sm-3">
+                <div class="appie-btn-box text-right">
+                  <a class="main-btn ml-30 asds" href="https://wustl.az1.qualtrics.com/jfe/form/SV_6seWEfMc8dY1aNE">Join Our Waitlist</a>
+                  <div class="toggle-btn ml-30 canvas_open d-lg-none d-block">
+                    <i class="fa fa-bars navs"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </header>
     <!--====== OFFCANVAS MENU PART START ======-->
 
     <div class="off_canvars_overlay">
